--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,18 +12,11 @@ $font-color-brown: #4B4646;
 //Form Register
 @import "formRegister";
 
-body {
-  min-height: 100vh;
-  position: relative;
-  background-image: url(/assets/pizza.png);
-  background-position: center;
-  background-size: cover;
-}
 .container {
   max-width: 414px;
-  height: 896px;
+  height: 1000px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
 }
