--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -1,11 +1,11 @@
-.form-register {
+.form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.form-register input {
+.form input {
   font-size: 1.5em;
   text-align: center;
   color: #FFFFFF;
