--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,10 @@ $font-color-brown: #4B4646;
 @import "form";
 //Pizza Choose
 @import "pizza-choose";
+//Pizza Create
+@import "pizza-create";
+//Cart
+@import "cart";
 
 .container {
   max-width: 414px;
@@ -27,17 +31,6 @@ input[type="radio"] {
   display: none;
 }
 
-.section-pizza-create {
-  position: relative;
-}
 
-.cartContainer {
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  background-color: #221C1C;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
+
+
