--- a/scss/_pizza-create.scss
+++ b/scss/_pizza-create.scss
@@ -11,7 +11,7 @@
 
 .list-elements {
   width: 292px;
-  height: 400px;
+  height: 300px;
   background: #221C1C;
   box-shadow: inset 12px 12px 25px rgba(0, 0, 0, 0.25), inset -12px -12px 25px #1D1919;
   border-radius: 10px;
@@ -33,4 +33,9 @@
   &.checked-pizza {
     background-color: #EF1414;
   }
+}
+
+.error {
+  color: $primary-color;
+  font-size: 1.4em;
 }
