--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -14,13 +14,24 @@
   font-size: 3em;
   width: 302px;
   height: 73px;
+  margin: 20px 0;
+}
+.btn-secondary {
+  font-size: 1.5em;
+  width: 194px;
+  height: 53px;
+  border-radius: 10px;
+  margin-top: 20px;
 }
 
 .btn-secondary {
   font-size: 1.5em;
   width: 194px;
   height: 53px;
+  border-radius: 10px;
+  margin-top: 20px;
 }
+
 .btn-plus {
   width: 30px;
   height: 29px;
@@ -41,6 +52,27 @@
     background: linear-gradient(180deg, $primary-color 36.98%, rgba(239, 20, 20, 0) 100%);
     border: none;
   }
+  &.checked {
+    background: linear-gradient(180deg, $primary-color 36.98%, rgba(239, 20, 20, 0) 100%);
+  }
+}
+
+//Btn ComplateOrder
+.btn-complete {
+  width: 326px;
+  height: 56px;
+  font-size: 1.8em;
+  margin-top: 80px;
+}
+
+//Btn payment
+
+.btn-payment {
+  color: $font-color-white;
+  width: 20px;
+  height: 20px;
+  border: 1px solid white;
+  border-radius: 5px;
   &.checked {
     background: linear-gradient(180deg, $primary-color 36.98%, rgba(239, 20, 20, 0) 100%);
   }
