--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -22,13 +22,19 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+
   p {
     font-size: 1.4em;
     color: $font-color-white;
   }
+
   input {
     border-radius: 10px;
     width: 200px;
     height: 40px;
   }
+}
+
+input[type="radio"] {
+  display: none;
 }
