--- a/scss/_cart.scss
+++ b/scss/_cart.scss
@@ -1,6 +1,6 @@
 .cartContainer {
   position: absolute;
-  width: 100%;
+  width: 414px;
   height: 100vh;
   background-color: #221C1C;
   display: flex;
