--- a/scss/_main-landing-page.scss
+++ b/scss/_main-landing-page.scss
@@ -1,7 +1,9 @@
 .main-section {
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   text-align: center;
   padding: 0 55px;
@@ -9,5 +11,4 @@
 }
 .main-section h2 {
   font-size: 3em;
-  padding-bottom: 63px;
 }
